# stlcpp_ospq

./: CMakeLists.txt  README.md  main.cpp
osqp_demo/: CMakeLists.txt  CppAD_demo.cpp  cppad_ipopt_demo.cpp  osqp_demo.cpp
stl_cpp/: CMakeLists.txt  README.md  main.cpp
stl_cpp/include/: Speaker.h  speechManager.h
stl_cpp/src/: Speaker.cpp  speechManager.cpp
